principal-prop-on-premise/app-router/k8s/deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-router
  labels:
    sample: principal-prop-on-prem
spec:
  host: app-router
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: JSESSIONID
          path: /
          ttl: 0s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-router
    sample: principal-prop-on-prem
  name: app-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-router
  strategy: {}
  template:
    metadata:
      labels:
        app: app-router
    spec:
      containers:
      - image: sapse/approuter:21.5.0
        name: app-router
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - name: approuter-config-volume
          mountPath: /app/xs-app.json
          subPath: xs-app.json
          readOnly: true
        - mountPath: /tmp
          name: tmp
        - name: xsuaa-credentials
          mountPath: /etc/secrets/sapcp/xsuaa/principal-prop-on-prem-xsuaa
          readOnly: true
        - mountPath: /etc/secrets/sapcp/destination/on-prem-backend
          name: destination-credentials
          readOnly: true
        - mountPath: /etc/secrets/sapcp/connectivity/connectivity-service-binding
          name: connectivity-proxy-details
          readOnly: true
      volumes:
      - name: approuter-config-volume
        configMap:
          name: approuter-config
          optional: false
      - name: tmp
        emptyDir: {}
      - name: xsuaa-credentials
        secret:
          secretName: principal-prop-on-prem-xsuaa
          optional: false
      - name: destination-credentials
        secret:
          secretName: principal-prop-on-prem-dest
          optional: false
      - name: connectivity-proxy-details
        projected:
          sources:
          - configMap:
              name: connectivity-proxy-info
              optional: false
          - secret:
              name: principal-prop-on-prem-xsuaa
              optional: false
              items:
              - key: clientid
                path: clientid
              - key: clientsecret
                path: clientsecret
              - key: url
                path: url
              - key: uaadomain
                path: uaadomain
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-router
    sample: principal-prop-on-prem
  name: app-router
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: app-router
status:
  loadBalancer: {}
